Compilador-MiniPython-TerceraEtapa/Compilador-MiniPython-TerceraEtapa/obj/Debug/net7.0/MiniPythonParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\dinar\RiderProjects\Compilador-MiniPython-TerceraEtapa\Compilador-MiniPython-TerceraEtapa\Grammar\MiniPythonParser.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Compilador_MiniPython_TerceraEtapa.Grammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class MiniPythonParser : Parser {
	public const int
		IF=1, ELSE=2, PRINT=3, DEF=4, RETURN=5, WHILE=6, FOR=7, IN=8, LEN=9, PIZQ=10, 
		PDER=11, DOSPUN=12, ASIGN=13, COMMA=14, GT=15, LT=16, LBRACKET=17, RBRACKET=18, 
		MUL=19, DIV=20, MOD=21, SUM=22, REST=23, GE=24, LE=25, EQEQ=26, NOTEQ=27, 
		ID=28, NUM=29, FLOAT=30, STRING=31, WS=32, COMMENT=33, BLOCK_COMMENT=34, 
		NEWLINE=35, INDENT=36;
	public const int
		RULE_program = 0, RULE_mainStatement = 1, RULE_defStatement = 2, RULE_argList = 3, 
		RULE_ifStatement = 4, RULE_whileStatement = 5, RULE_forStatement = 6, 
		RULE_returnStatement = 7, RULE_printStatement = 8, RULE_assignStatement = 9, 
		RULE_functionCallStatement = 10, RULE_sequence = 11, RULE_statement = 12, 
		RULE_expression = 13, RULE_comparison = 14, RULE_additionExpression = 15, 
		RULE_additionFactor = 16, RULE_multiplicationExpression = 17, RULE_multiplicationFactor = 18, 
		RULE_elementExpression = 19, RULE_elementAccess = 20, RULE_expressionList = 21, 
		RULE_primitiveExpression = 22;
	public static readonly string[] ruleNames = {
		"program", "mainStatement", "defStatement", "argList", "ifStatement", 
		"whileStatement", "forStatement", "returnStatement", "printStatement", 
		"assignStatement", "functionCallStatement", "sequence", "statement", "expression", 
		"comparison", "additionExpression", "additionFactor", "multiplicationExpression", 
		"multiplicationFactor", "elementExpression", "elementAccess", "expressionList", 
		"primitiveExpression"
	};

	private static readonly string[] _LiteralNames = {
		null, "'if'", "'else'", "'print'", "'def'", "'return'", "'while'", "'for'", 
		"'in'", "'len'", "'('", "')'", "':'", "'='", "','", "'>'", "'<'", "'['", 
		"']'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>='", "'<='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "IF", "ELSE", "PRINT", "DEF", "RETURN", "WHILE", "FOR", "IN", "LEN", 
		"PIZQ", "PDER", "DOSPUN", "ASIGN", "COMMA", "GT", "LT", "LBRACKET", "RBRACKET", 
		"MUL", "DIV", "MOD", "SUM", "REST", "GE", "LE", "EQEQ", "NOTEQ", "ID", 
		"NUM", "FLOAT", "STRING", "WS", "COMMENT", "BLOCK_COMMENT", "NEWLINE", 
		"INDENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniPythonParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MiniPythonParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(MiniPythonParser.Eof, 0); }
		public MainStatementContext[] mainStatement() {
			return GetRuleContexts<MainStatementContext>();
		}
		public MainStatementContext mainStatement(int i) {
			return GetRuleContext<MainStatementContext>(i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(MiniPythonParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(MiniPythonParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << PRINT) | (1L << DEF) | (1L << RETURN) | (1L << WHILE) | (1L << FOR) | (1L << ID) | (1L << NEWLINE))) != 0)) {
				{
				State = 48;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case IF:
				case PRINT:
				case DEF:
				case RETURN:
				case WHILE:
				case FOR:
				case ID:
					{
					State = 46; mainStatement();
					}
					break;
				case NEWLINE:
					{
					State = 47; Match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 52;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 53; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainStatementContext : ParserRuleContext {
		public DefStatementContext defStatement() {
			return GetRuleContext<DefStatementContext>(0);
		}
		public AssignStatementContext assignStatement() {
			return GetRuleContext<AssignStatementContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public WhileStatementContext whileStatement() {
			return GetRuleContext<WhileStatementContext>(0);
		}
		public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		public PrintStatementContext printStatement() {
			return GetRuleContext<PrintStatementContext>(0);
		}
		public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public FunctionCallStatementContext functionCallStatement() {
			return GetRuleContext<FunctionCallStatementContext>(0);
		}
		public MainStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterMainStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitMainStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMainStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainStatementContext mainStatement() {
		MainStatementContext _localctx = new MainStatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_mainStatement);
		try {
			State = 63;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 55; defStatement();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 56; assignStatement();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 57; ifStatement();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 58; whileStatement();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 59; forStatement();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 60; printStatement();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 61; returnStatement();
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 62; functionCallStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefStatementContext : ParserRuleContext {
		public ITerminalNode DEF() { return GetToken(MiniPythonParser.DEF, 0); }
		public ITerminalNode ID() { return GetToken(MiniPythonParser.ID, 0); }
		public ITerminalNode PIZQ() { return GetToken(MiniPythonParser.PIZQ, 0); }
		public ITerminalNode PDER() { return GetToken(MiniPythonParser.PDER, 0); }
		public ITerminalNode DOSPUN() { return GetToken(MiniPythonParser.DOSPUN, 0); }
		public ITerminalNode[] NEWLINE() { return GetTokens(MiniPythonParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(MiniPythonParser.NEWLINE, i);
		}
		public ITerminalNode INDENT() { return GetToken(MiniPythonParser.INDENT, 0); }
		public SequenceContext sequence() {
			return GetRuleContext<SequenceContext>(0);
		}
		public ArgListContext argList() {
			return GetRuleContext<ArgListContext>(0);
		}
		public DefStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterDefStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitDefStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefStatementContext defStatement() {
		DefStatementContext _localctx = new DefStatementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_defStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; Match(DEF);
			State = 66; Match(ID);
			State = 67; Match(PIZQ);
			State = 69;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ID) {
				{
				State = 68; argList();
				}
			}

			State = 71; Match(PDER);
			State = 72; Match(DOSPUN);
			State = 73; Match(NEWLINE);
			State = 74; Match(INDENT);
			State = 75; sequence();
			State = 76; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgListContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(MiniPythonParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MiniPythonParser.ID, i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(MiniPythonParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(MiniPythonParser.COMMA, i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterArgList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitArgList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgListContext argList() {
		ArgListContext _localctx = new ArgListContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_argList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; Match(ID);
			State = 83;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 79; Match(COMMA);
				State = 80; Match(ID);
				}
				}
				State = 85;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatementContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(MiniPythonParser.IF, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode[] DOSPUN() { return GetTokens(MiniPythonParser.DOSPUN); }
		public ITerminalNode DOSPUN(int i) {
			return GetToken(MiniPythonParser.DOSPUN, i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(MiniPythonParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(MiniPythonParser.NEWLINE, i);
		}
		public ITerminalNode[] INDENT() { return GetTokens(MiniPythonParser.INDENT); }
		public ITerminalNode INDENT(int i) {
			return GetToken(MiniPythonParser.INDENT, i);
		}
		public SequenceContext[] sequence() {
			return GetRuleContexts<SequenceContext>();
		}
		public SequenceContext sequence(int i) {
			return GetRuleContext<SequenceContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(MiniPythonParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStatementContext ifStatement() {
		IfStatementContext _localctx = new IfStatementContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_ifStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(IF);
			State = 87; expression();
			State = 88; Match(DOSPUN);
			State = 89; Match(NEWLINE);
			State = 90; Match(INDENT);
			State = 91; sequence();
			State = 97;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 92; Match(ELSE);
				State = 93; Match(DOSPUN);
				State = 94; Match(NEWLINE);
				State = 95; Match(INDENT);
				State = 96; sequence();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileStatementContext : ParserRuleContext {
		public ITerminalNode WHILE() { return GetToken(MiniPythonParser.WHILE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode DOSPUN() { return GetToken(MiniPythonParser.DOSPUN, 0); }
		public ITerminalNode NEWLINE() { return GetToken(MiniPythonParser.NEWLINE, 0); }
		public ITerminalNode INDENT() { return GetToken(MiniPythonParser.INDENT, 0); }
		public SequenceContext sequence() {
			return GetRuleContext<SequenceContext>(0);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterWhileStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitWhileStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileStatementContext whileStatement() {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_whileStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(WHILE);
			State = 100; expression();
			State = 101; Match(DOSPUN);
			State = 102; Match(NEWLINE);
			State = 103; Match(INDENT);
			State = 104; sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForStatementContext : ParserRuleContext {
		public ITerminalNode FOR() { return GetToken(MiniPythonParser.FOR, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode IN() { return GetToken(MiniPythonParser.IN, 0); }
		public ExpressionListContext expressionList() {
			return GetRuleContext<ExpressionListContext>(0);
		}
		public ITerminalNode DOSPUN() { return GetToken(MiniPythonParser.DOSPUN, 0); }
		public ITerminalNode NEWLINE() { return GetToken(MiniPythonParser.NEWLINE, 0); }
		public ITerminalNode INDENT() { return GetToken(MiniPythonParser.INDENT, 0); }
		public SequenceContext sequence() {
			return GetRuleContext<SequenceContext>(0);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterForStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitForStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForStatementContext forStatement() {
		ForStatementContext _localctx = new ForStatementContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_forStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(FOR);
			State = 107; expression();
			State = 108; Match(IN);
			State = 109; expressionList();
			State = 110; Match(DOSPUN);
			State = 111; Match(NEWLINE);
			State = 112; Match(INDENT);
			State = 113; sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnStatementContext : ParserRuleContext {
		public ITerminalNode RETURN() { return GetToken(MiniPythonParser.RETURN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(MiniPythonParser.NEWLINE, 0); }
		public ReturnStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterReturnStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitReturnStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnStatementContext returnStatement() {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_returnStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(RETURN);
			State = 116; expression();
			State = 117; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintStatementContext : ParserRuleContext {
		public ITerminalNode PRINT() { return GetToken(MiniPythonParser.PRINT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(MiniPythonParser.NEWLINE, 0); }
		public PrintStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_printStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterPrintStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitPrintStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintStatementContext printStatement() {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_printStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; Match(PRINT);
			State = 120; expression();
			State = 121; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignStatementContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(MiniPythonParser.ID, 0); }
		public ITerminalNode ASIGN() { return GetToken(MiniPythonParser.ASIGN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(MiniPythonParser.NEWLINE, 0); }
		public AssignStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterAssignStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitAssignStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignStatementContext assignStatement() {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_assignStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123; Match(ID);
			State = 124; Match(ASIGN);
			State = 125; expression();
			State = 126; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallStatementContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(MiniPythonParser.ID, 0); }
		public ITerminalNode PIZQ() { return GetToken(MiniPythonParser.PIZQ, 0); }
		public ITerminalNode PDER() { return GetToken(MiniPythonParser.PDER, 0); }
		public ITerminalNode NEWLINE() { return GetToken(MiniPythonParser.NEWLINE, 0); }
		public ExpressionListContext expressionList() {
			return GetRuleContext<ExpressionListContext>(0);
		}
		public FunctionCallStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCallStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.EnterFunctionCallStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniPythonParserListener typedListener = listener as IMiniPythonParserListener;
			if (typedListener != null) typedListener.ExitFunctionCallStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniPythonParserVisitor<TResult> typedVisitor = visitor as IMiniPythonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCallStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
